# WXDialogue

./: .gitignore  CMakeLists.txt  WXDialogue.rar  build-clang.bat  build-mingw.bat  build.bat  readme.md
c/: arr.c  arr.h  buff.c  buff.h  call.c  call.h  define.h  hash.c  hash.h  iterator.c  iterator.h  lib.c  lib.h  log.c  log.h  parse.c  parse.h  save.c  state.c  state.h  std.c  std.h  string_builder.c  string_builder.h  type_define.h  wxdl.h
c/exam/: wxdl.c
